deploy/kubernetes/service.yaml
# Cartographus - Media Server Analytics and Geographic Visualization
# Copyright 2026 Tom F. (tomtom215)
# SPDX-License-Identifier: AGPL-3.0-or-later
# https://github.com/tomtom215/cartographus
apiVersion: v1
kind: Service
metadata:
  name: cartographus
  namespace: cartographus
  labels:
    app.kubernetes.io/name: cartographus
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: cartographus
